# appstore-connect-python

./: .env.example  .flake8  .gitignore  .pypirc.template  CHANGELOG.md  CLAUDE.md  MANIFEST.in  Makefile  README.md  RELEASE_GUIDE.md  build_and_upload.sh  pyproject.toml  pytest.ini  release.sh  requirements-dev.txt  setup.py  tox.ini
.claude/: settings.local.json
.github/workflows/: test.yml
appstore_connect/: __init__.py  client.py  exceptions.py  reports.py  utils.py
docs/: GETTING_STARTED.md
examples/: advanced_reporting.py  basic_usage.py  batch_metadata_operations.py  integration_example.py  metadata_management.py
src/appstore_connect/: __init__.py  client.py  exceptions.py  metadata.py  reports.py  utils.py
tests/: conftest.py  test_client.py  test_client_errors.py  test_client_final_coverage.py  test_client_metadata.py  test_client_reporting.py  test_correct_coverage.py  test_error_handling_coverage.py  test_exceptions.py  test_integration.py  test_metadata.py  test_metadata_additional.py  test_remaining_coverage.py  test_reports.py  test_reports_additional.py  test_utils.py  test_utils_additional.py
verify_pypi/verify_pypi/: apple_appstore_connect_client-1.0.4-py3-none-any.whl
